--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
   "name": "ka-ndeke-backend",
   "version": "1.0.0",
-  "description": "Ka Ndeke Demo Crash Game Backend",
+  "description": "Ka Ndeke crash game backend (SQLite + JWT + phone auth)",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "uuid": "^9.0.1"
-  }
+    "jsonwebtoken": "^9.0.0",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "keywords": [
+    "crash",
+    "game",
+    "sqlite",
+    "express",
+    "jwt"
+  ],
+  "author": "",
+  "license": "MIT"
 }
